plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.fishing'
version = '0.0.1-SNAPSHOT'
description = 'Pet-Project'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    // Database
    implementation 'org.postgresql:postgresql:42.7.7'
    runtimeOnly 'com.h2database:h2'  // Для тестов

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // MapStruct
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    // TEST DEPENDENCIES
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'


    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.3'


    // Mockito
    //testImplementation 'org.mockito:mockito-core:5.5.0'
    //testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'

    // JUnit Platform Launcher (для запуска через main)
  //  testImplementation 'org.junit.platform:junit-platform-launcher:1.10.0'

    // JSON Path для тестов
    testImplementation 'com.jayway.jsonpath:json-path:2.9.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
test {
    useJUnitPlatform()
    // Разрешаем Mockito использовать агент в Java 25
    jvmArgs("-XX:+EnableDynamicAgentLoading")
}